Bug 428173 - The titles of "System Monitor Sensor" widget and its settings window are not updated when I apply another "Display Style"
Summary: The titles of "System Monitor Sensor" widget and its settings window are not ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-24 11:34 UTC by Patrick Silva
Modified: 2021-04-26 11:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (2.68 MB, video/webm)
2020-10-24 11:34 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-10-24 11:34:48 UTC
Created attachment 132681 [details]
screen recording

STEPS TO REPRODUCE
1. add System Monitor Sensor widget to desktop
2. open its settings 
3. select another "Display Style" and apply the change

OBSERVED RESULT
As we can see in the attached screen recording, the titles of the widget and its settings window are not updated

EXPECTED RESULT
the titles of the widget and its settings window should be updated according
to display style applied in the last step.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.0
Comment 1 Patrick Silva 2020-10-24 11:45:09 UTC
I think that if the widget title was previously changed by the user in "Appearance" section, the titles should not be updated when we apply another display style. In this case the behavior shown in the screen recording is expected.
Comment 2 Patrick Silva 2020-10-24 11:53:15 UTC
A possible solution could be use "System Monitor Sensor" as default widget title
instead of "Pie chart".
Comment 3 Alex 2021-03-09 01:34:32 UTC
I cannot even change the text of the widget with 5.21.2.  Additionally all of my widgets that I had setup are now completely gone.  Keep doing a great job breaking things that use to work with each and every release. 👍
Comment 4 David Edmundson 2021-04-22 14:30:00 UTC
@patrick.

Agreed, I think that's a good solution
Comment 5 Bug Janitor Service 2021-04-26 09:27:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/152
Comment 6 David Redondo 2021-04-26 11:25:24 UTC
Git commit 38cd07635c83b641dd8c80aeb5aa64a9a9d3513f by David Redondo.
Committed on 26/04/2021 at 09:25.
Pushed by ngraham into branch 'master'.

Better face default title

The name of the current face is not a good default title. Worse it
can be confusing when active face changes. A neutral title is better
here.

M  +1    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/38cd07635c83b641dd8c80aeb5aa64a9a9d3513f