Better face default title

The name of the current face is not a good default title. Worse it
can be confusing when active face changes. A neutral title is better
here.
BUG:428173